# Robotic-AI

./: .gitignore  Cargo.toml
src/: main.rs
src/bot/: mod.rs  movement.rs  print.rs  routines.rs  sound.rs  trash_collection.rs
src/robot/: mod.rs  movement.rs  routines.rs  sound.rs  trash_collection.rs
src/utils/: mod.rs  spytrash.rs  travel.rs
